# services/user-service/internal/dto/request/register.go
@@ -1,8 +1,8 @@
 package request
 
 type RegisterRequest struct {
-	Email    string `binding:"required,email"`
-	Password string `binding:"required,min=8"`
-	FullName string `binding:"required"`
-	Phone    string `binding:"required"`
+	Email    string
+	Password string
+	FullName string
+	Phone    string
 }
