# services/user-service/internal/dto/request/update_address.go
@@ -1,0 +1,13 @@
+package request
+
+type UpdateAddressRequest struct {
+	AddressType  *string
+	FullName     *string
+	Phone        *string
+	AddressLine1 *string
+	AddressLine2 *string
+	Ward         *string
+	City         *string
+	Country      *string
+	IsDefault    *bool
+}
