# services/user-service/internal/dto/request/update_user.go
@@ -1,0 +1,9 @@
+package request
+
+import "time"
+
+type UpdateUserRequest struct {
+	FullName    *string
+	DateOfBirth *time.Time
+	Gender      *string
+}
